fix overflow of popups

--- a/src/style.css
+++ b/src/style.css
@@ -93,7 +93,7 @@ footer {
   right: 0;
   z-index: 1000;
   background-color: rgb(226, 225, 225, 80%);
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .reservations .reservation-inner {
